Additional resources on uv

--- a/src/content/ideas/2025/uv/index.mdx
+++ b/src/content/ideas/2025/uv/index.mdx
@@ -244,3 +244,13 @@ uvx black .           # Run a one-off tool
 uv build              # Build a package
 uv publish            # Publish a package
 ```
+
+## Additional Resources
+
+Here are some helpful links for getting started with `uv`:
+
+-   **[Official `uv` Documentation](https://astral.sh/uv)**: The complete guide to `uv`, from getting started to advanced workflows.
+-   **[Astral Blog](https://astral.sh/blog/uv)**: The announcement post for `uv`, explaining the motivation and vision behind the project.
+-   **[GitHub Repository](https://github.com/astral-sh/uv)**: The source code for `uv`, where you can report issues and contribute.
+-   **[Managing Python Projects With uv: An All-in-One Solution](https://realpython.com/python-uv/)**: A comprehensive Real Python tutorial on using `uv` for the entire project lifecycle.
+-   **[uv vs pip: Managing Python Packages and Dependencies](https://realpython.com/uv-vs-pip/)**: A detailed comparison of `uv` and `pip`, highlighting the trade-offs.
